fix: thank you, chat gpt

--- a/translations/edx-platform/conf/locale/ru/LC_MESSAGES/django.po
+++ b/translations/edx-platform/conf/locale/ru/LC_MESSAGES/django.po
@@ -9498,7 +9498,7 @@ msgid ""
 "your password {link_start}here{link_end} before you try again."
 msgstr ""
 "В целях защиты вашей учетной записи она временно заблокирована. Повторите попытку через "
-"{locked_out_ period} минут.{li_start}На всякий случай вы можете сбросить пароль "
+"{locked_out_period} минут.{li_start}На всякий случай вы можете сбросить пароль "
 "{link_start}здесь{link_end}, прежде чем повторять попытку."
 
 #: openedx/core/djangoapps/user_authn/views/login.py:230
@@ -9778,11 +9778,12 @@ msgid ""
 "accordance                   with the {privacy_policy_link_start}Privacy "
 "Policy{privacy_policy_link_end}."
 msgstr ""
+"Создавая учетную запись, вы соглашаатесь                   "
 "{terms_of_service_link_start}{terms_of_service}"
-"{terms_of_service_link_end} и вы принимаете, что "
-"{platform_name} и каждый участник обрабатывают ваши персональные данные в "
-"соответствии с " {privacy_policy_link_start}Политикой "
-"конфиденциальности{privacy_policy_link_end}."
+"{terms_of_service_link_end}                   и вы признаете что, "
+"{platform_name} и каждый участник обрабатывает ваши персональные данные "
+"согласно                   {privacy_policy_link_start}Политикой "
+"Приватности{privacy_policy_link_end}."
 
 
 #. Translators: "Terms of service" is a legal document users must agree to
@@ -9922,7 +9923,7 @@ msgid ""
 "stay on track!"
 msgstr ""
 "Соблюдение графика — лучший способ обеспечить успешное "
-"прохождение курса в самостоятельном темпе. Это расписание {курса} поможет вам "
+"прохождение курса в самостоятельном темпе. Это расписание {course} поможет вам "
 "не сбиться с пути!"
 
 #: openedx/features/calendar_sync/utils.py:20
@@ -10055,7 +10056,7 @@ msgid ""
 msgstr ""
 "{line_break}Обновите курс до {upgrade_deadline}, чтобы получить неограниченный доступ "
 "к курсу, пока он существует на сайте. {a_open}Обновите "
-"курс сейчас{sronly_span_open}, чтобы сохранить доступ после {дата_истечения}{span_close} "
+"курс сейчас{sronly_span_open}, чтобы сохранить доступ после {expiration_date}{span_close} "
 "{a_close}"
 
 #: openedx/features/course_experience/api/v1/views.py:64
@@ -10195,7 +10196,7 @@ msgid ""
 "access {platform_name}.{line_break}{line_break}Error Details:{line_break}"
 "{error_message}"
 msgstr ""
-"К сожалению, у вас нет прав на доступ к платформе "{platform_name}" через этот "
+"К сожалению, у вас нет прав на доступ к платформе {platform_name} через этот "
 "канал. Чтобы получить доступ к {platform_name}, обратитесь к администратору или менеджеру вашего "
 "обучения.{line_break}{line_break}Сведения об ошибке:{line_break}"
 "{error_message}"
@@ -10893,8 +10894,8 @@ msgid ""
 "Defines when to randomize the variables specified in the associated Python "
 "script. For problems that do not randomize values, specify \"Never\". "
 msgstr ""
-"Определяет, когда рандомизировать переменные, указанные в связанном Python-скрипте. "
-"Для задач, в которых значения не рандомизируются, укажите \«Never\»."
+"Определяет, когда рандомизировать переменные, указанные в связанном Python "
+"скрипте. Для задач, в которых значения не рандомизируются, укажите \"Never\". "
 
 #: xmodule/capa_block.py:279
 msgid "On Reset"
@@ -11279,11 +11280,11 @@ msgstr "LTI-паспорта"
 
 #: xmodule/course_block.py:324
 msgid ""
-"Enter the passports for course LTI tools in the following format: "id:"
-"client_key:client_secret"."
+"Enter the passports for course LTI tools in the following format: id:"
+"client_key:client_secret."
 msgstr ""
-"Введите паспорта для инструментов LTI курса в следующем формате: "id:"
-"client_key:client_secret"."
+"Введите паспорта для инструментов LTI курса в следующем формате: id:"
+"client_key:client_secret."
 
 #: xmodule/course_block.py:328
 msgid ""
@@ -11332,9 +11333,9 @@ msgstr "Рекламируемое начало курса"
 #: xmodule/course_block.py:362
 msgid ""
 "Enter the text that you want to use as the advertised starting time frame "
-"for the course, such as "Winter 2018". If you enter null for this value, "
+"for the course, such as 'Winter 2018'. If you enter null for this value, "
 "the start date that you have set for this course is used."
-msgstr "Введите текст, который вы хотите использовать в качестве рекламируемого временного интервала начала курса, например, "Зима 2018". Если вы введете null для этого значения, будет использована дата начала, которую вы установили для этого курса."
+msgstr "Введите текст, который вы хотите использовать в качестве рекламируемого временного интервала начала курса, например, 'Зима 2018'. Если вы введете null для этого значения, будет использована дата начала, которую вы установили для этого курса."
 
 #: xmodule/course_block.py:369
 msgid "Pre-Requisite Courses"
@@ -11372,8 +11373,8 @@ msgstr "Редактор курса"
 
 #: xmodule/course_block.py:392 xmodule/modulestore/inheritance.py:64
 msgid ""
-"Enter the method by which this course is edited ("XML" or "Studio")."
-msgstr "Введите метод, с помощью которого редактируется этот курс ("XML" или "Studio")."
+"Enter the method by which this course is edited ('XML' or 'Studio')."
+msgstr "Введите метод, с помощью которого редактируется этот курс ('XML' или 'Studio')."
 
 #: xmodule/course_block.py:399
 msgid "Course Survey URL"
@@ -11394,21 +11395,21 @@ msgid ""
 "Enter pairs of dates between which students cannot post to discussion "
 "forums. Inside the provided brackets, enter an additional set of square "
 "brackets surrounding each pair of dates you add. Format each pair of dates "
-"as ["YYYY-MM-DD", "YYYY-MM-DD"]. To specify times as well as dates, "
-"format each pair as ["YYYY-MM-DDTHH:MM", "YYYY-MM-DDTHH:MM"]. Be sure to "
-"include the "T" between the date and time. For example, an entry defining "
+"as ['YYYY-MM-DD', 'YYYY-MM-DD']. To specify times as well as dates, "
+"format each pair as ['YYYY-MM-DDTHH:MM', 'YYYY-MM-DDTHH:MM']. Be sure to "
+"include the 'T' between the date and time. For example, an entry defining "
 "two blackout periods looks like this, including the outer pair of square "
-"brackets: [["2015-09-15", "2015-09-21"], ["2015-10-01", "
-""2015-10-08"]] "
+"brackets: [['2015-09-15', '2015-09-21'], ['2015-10-01', "
+"'2015-10-08']] "
 msgstr ""
 "Введите пары дат, в течение которых студенты не могут публиковать сообщения "
 "в форумах обсуждений. Внутри предоставленных скобок введите дополнительный "
 "набор квадратных скобок, окружающий каждую пару добавляемых дат. Форматируйте "
-"каждую пару дат как ["YYYY-MM-DD", "YYYY-MM-DD"]. Чтобы указать время, "
-"форматируйте каждую пару как ["YYYY-MM-DDTHH:MM", "YYYY-MM-DDTHH:MM"]. "
-"Не забудьте включить "T" между датой и временем. Например, запись, определяющая "
+"каждую пару дат как ['YYYY-MM-DD', 'YYYY-MM-DD']. Чтобы указать время, "
+"форматируйте каждую пару как ['YYYY-MM-DDTHH:MM', 'YYYY-MM-DDTHH:MM']. "
+"Не забудьте включить 'T' между датой и временем. Например, запись, определяющая "
 "два периода отключения, выглядит так, включая внешнюю пару квадратных скобок: "
-"[["2015-09-15", "2015-09-21"], ["2015-10-01", "2015-10-08"]]"
+"[['2015-09-15', '2015-09-21'], ['2015-10-01', '2015-10-08']]"
 
 #: xmodule/course_block.py:417
 msgid "Discussion Topic Mapping"
@@ -11416,25 +11417,25 @@ msgstr "Сопоставление тем обсуждений"
 
 #: xmodule/course_block.py:419
 msgid ""
-"Enter discussion categories in the following format: "CategoryName": "
-"{"id": "i4x-InstitutionName-CourseNumber-course-CourseRun"}. For "
-"example, one discussion category may be "Lydian Mode": {"id": "i4x-"
-"UniversityX-MUS101-course-2015_T1"}. The "id" value for each category "
-"must be unique. In "id" values, the only special characters that are "
+"Enter discussion categories in the following format: 'CategoryName': "
+"{'id': 'i4x-InstitutionName-CourseNumber-course-CourseRun'}. For "
+"example, one discussion category may be 'Lydian Mode': {'id': 'i4x-"
+"UniversityX-MUS101-course-2015_T1'}. The 'id' value for each category "
+"must be unique. In 'id' values, the only special characters that are "
 "supported are underscore, hyphen, and period. You can also specify a "
 "category as the default for new posts in the Discussion page by setting its "
-""default" attribute to true. For example, "Lydian Mode": {"id": "i4x-"
-"UniversityX-MUS101-course-2015_T1", "default": true}."
+"'default' attribute to true. For example, 'Lydian Mode': {'id': 'i4x-"
+"UniversityX-MUS101-course-2015_T1', 'default': true}."
 msgstr ""
-"Введите категории обсуждений в следующем формате: "CategoryName": "
-"{"id": "i4x-InstitutionName-CourseNumber-course-CourseRun"}. Например, "
-"одна категория обсуждения может быть "Лидийский лад": {"id": "i4x-"
-"UniversityX-MUS101-course-2015_T1"}. Значение "id" для каждой категории "
-"должно быть уникальным. В значениях "id" поддерживаются только специальные "
+"Введите категории обсуждений в следующем формате: 'CategoryName': "
+"{'id': 'i4x-InstitutionName-CourseNumber-course-CourseRun'}. Например, "
+"одна категория обсуждения может быть 'Лидийский лад': {'id': 'i4x-"
+"UniversityX-MUS101-course-2015_T1'}. Значение 'id' для каждой категории "
+"должно быть уникальным. В значениях 'id' поддерживаются только специальные "
 "символы подчеркивание, дефис и точка. Вы также можете указать категорию как "
 "умолчание для новых сообщений на странице обсуждения, установив ее атрибут "
-""default" в значение true. Например, "Лидийский лад": {"id": "i4x-"
-"UniversityX-MUS101-course-2015_T1", "default": true}."
+"'default' в значение true. Например, 'Лидийский лад': {'id': 'i4x-"
+"UniversityX-MUS101-course-2015_T1', 'default': true}."
 
 #: xmodule/course_block.py:431
 msgid "Discussions Plugin Settings"
@@ -11639,13 +11640,13 @@ msgstr "Формат отображения даты сдачи"
 
 #: xmodule/course_block.py:561
 msgid ""
-"Enter the format for due dates. The default is Mon DD, YYYY. Enter "%m-%d-"
-"%Y" for MM-DD-YYYY, "%d-%m-%Y" for DD-MM-YYYY, "%Y-%m-%d" for YYYY-MM-"
-"DD, or "%Y-%d-%m" for YYYY-DD-MM."
+"Enter the format for due dates. The default is Mon DD, YYYY. Enter '%m-%d-"
+"%Y for MM-DD-YYYY, '%d-%m-%Y' for DD-MM-YYYY, '%Y-%m-%d' for YYYY-MM-"
+"DD, or '%Y-%d-%m' for YYYY-DD-MM."
 msgstr ""
 "Введите формат для дат сдачи. По умолчанию используется Mon DD, YYYY. Введите "
-""%m-%d-%Y" для MM-DD-YYYY, "%d-%m-%Y" для DD-MM-YYYY, "%Y-%m-%d" для "
-"YYYY-MM-DD или "%Y-%d-%m" для YYYY-DD-MM."
+"'%m-%d-%Y' для MM-DD-YYYY,'%d-%m-%Y' для DD-MM-YYYY, '%Y-%m-%d' для "
+"YYYY-MM-DD или '%Y-%d-%m' для YYYY-DD-MM."
 
 #: xmodule/course_block.py:567
 msgid "External Login Domain"
@@ -11722,11 +11723,11 @@ msgstr ""
 msgid ""
 "Use this setting only when generating PDF certificates. Between quotation "
 "marks, enter the short name of the type of certificate that students receive "
-"when they complete the course. For instance, "Certificate"."
+"when they complete the course. For instance, 'Certificate'."
 msgstr ""
 "Используйте эту настройку только при генерации PDF-сертификатов. В кавычках "
 "введите короткое название типа сертификата, который получают студенты после "
-"завершения курса. Например, "Сертификат"."
+"завершения курса. Например, 'Сертификат'."
 
 #: xmodule/course_block.py:629
 msgid "Certificate Name (Short)"
@@ -11736,11 +11737,11 @@ msgstr "Название сертификата (короткое)"
 msgid ""
 "Use this setting only when generating PDF certificates. Between quotation "
 "marks, enter the long name of the type of certificate that students receive "
-"when they complete the course. For instance, "Certificate of Achievement"."
+"when they complete the course. For instance, 'Certificate of Achievement'."
 msgstr ""
 "Используйте эту настройку только при генерации PDF-сертификатов. В кавычках "
 "введите полное название типа сертификата, который получают студенты после "
-"завершения курса. Например, "Сертификат об окончании"."
+"завершения курса. Например, 'Сертификат об окончании'."
 
 #: xmodule/course_block.py:639
 msgid "Certificate Name (Long)"
@@ -11978,15 +11979,15 @@ msgstr "Настройка команд"
 #: xmodule/course_block.py:840
 msgid ""
 "Configure team sets, limit team sizes, and set visibility settings using "
-"JSON. See <a target="&#95;blank" href="https://edx.readthedocs.io/"
+"JSON. See <a target='&#95;blank' href='https://edx.readthedocs.io/"
 "projects/edx-partner-course-staff/en/latest/course_features/teams/"
-"teams_setup.html#enable-and-configure-teams">teams configuration "
+"teams_setup.html#enable-and-configure-teams'>teams configuration "
 "documentation</a> for help and examples."
 msgstr ""
 "Настройте наборы команд, ограничьте размеры команд и установите параметры видимости, "
-"используя JSON. Смотрите <a target="&#95;blank" href="https://edx.readthedocs.io/"
+"используя JSON. Смотрите <a target='&#95;blank' href='https://edx.readthedocs.io/"
 "projects/edx-partner-course-staff/en/latest/course_features/teams/"
-"teams_setup.html#enable-and-configure-teams">документацию по настройке команд</a> "
+"teams_setup.html#enable-and-configure-teams'>документацию по настройке команд</a> "
 "для получения помощи и примеров."
 
 #: xmodule/course_block.py:849
@@ -12089,11 +12090,11 @@ msgstr "Самостоятельное обучение"
 
 #: xmodule/course_block.py:933 xmodule/modulestore/inheritance.py:235
 msgid ""
-"Set this to "true" to mark this course as self-paced. Self-paced courses "
+"Set this to 'true' to mark this course as self-paced. Self-paced courses "
 "do not have due dates for assignments, and students can progress through the "
 "course at any rate before the course ends."
 msgstr ""
-"Установите это значение на "true", чтобы отметить курс как самостоятельное обучение. "
+"Установите это значение на 'true', чтобы отметить курс как самостоятельное обучение. "
 "Курсы с самостоятельным обучением не имеют сроков сдачи заданий, и студенты могут "
 "продвигаться по курсу в любом темпе до его завершения."
 
@@ -12230,13 +12231,13 @@ msgstr "Другие настройки курса"
 msgid ""
 "Any additional information about the course that the platform needs or that "
 "allows integration with external systems such as CRM software. Enter a "
-"dictionary of values in JSON format, such as { "my_custom_setting": "
-""value", "other_setting": "value" }"
+"dictionary of values in JSON format, such as { 'my_custom_setting': "
+"'value', 'other_setting': 'value' }"
 msgstr ""
 "Любая дополнительная информация о курсе, которая необходима платформе или "
 "которая позволяет интеграцию с внешними системами, такими как CRM-программное обеспечение. "
-"Введите словарь значений в формате JSON, например { "my_custom_setting": "
-""value", "other_setting": "value" }"
+"Введите словарь значений в формате JSON, например { 'my_custom_setting': "
+"'value', 'other_setting': 'value' }"
 
 #: xmodule/course_block.py:1107
 msgid "General"
@@ -12306,15 +12307,15 @@ msgstr "{section_type} Среднее = {percent:.0%}"
 #: xmodule/graders.py:438
 #, python-brace-format
 msgid "{short_label} Avg"
-msgstr "{short_label} Ср."  # "Ср." is short for "Среднее"
+msgstr "{short_label} Ср."
 
 #: xmodule/hidden_block.py:38
 #, python-brace-format
 msgid ""
-"ERROR: "{block_type}" is an unknown component type. This component will be "
+"ERROR: {block_type} is an unknown component type. This component will be "
 "hidden in LMS."
 msgstr ""
-"ОШИБКА: "{block_type}" — это неизвестный тип компонента. Этот компонент будет "
+"ОШИБКА: {block_type} — это неизвестный тип компонента. Этот компонент будет "
 "скрыт в LMS."
 
 #: xmodule/html_block.py:61 xmodule/html_block.py:370 xmodule/html_block.py:430
@@ -12409,10 +12410,10 @@ msgstr "Тип задачи"
 
 #: xmodule/library_content_block.py:157
 msgid ""
-"Choose a problem type to fetch from the library. If "Any Type" is selected "
+"Choose a problem type to fetch from the library. If Any Type is selected "
 "no filtering is applied."
 msgstr ""
-"Выберите тип задачи для извлечения из библиотеки. Если выбран "Любой тип", "
+"Выберите тип задачи для извлечения из библиотеки. Если выбран Любой тип, "
 "фильтрация не применяется."
 
 #: xmodule/library_content_block.py:171
@@ -12445,7 +12446,7 @@ msgstr "Этот компонент устарел. В библиотеке ес
 #: xmodule/library_content_block.py:633
 #, python-brace-format
 msgid "{refresh_icon} Update now."
-msgstr "↻ Обновить сейчас."
+msgstr "{refresh_icon} Обновить сейчас."
 
 #: xmodule/library_content_block.py:641
 msgid "Library is invalid, corrupt, or has been deleted."
