--- a/translations/frontend-app-authn/src/i18n/messages/ru.json
+++ b/translations/frontend-app-authn/src/i18n/messages/ru.json
@@ -24,7 +24,7 @@
   "institution.login.button": "Полномочия учреждения/кампуса",
   "login.other.options.heading": "Или войдите с помощью:",
   "enterprise.login.btn.text": "Учетные данные компании или школы",
-  "forgot.password.confirmation.message": "Мы отправили электронное письмо на {email} с инструкциями по сбросу пароля. Если вы не получили сообщение о сбросе пароля через 1 минуту, убедитесь, что вы ввели правильный адрес электронной почты, или проверьте папку со спамом. Если вам нужна дополнительная помощь, {supportLink} .",
+  "forgot.password.confirmation.message": "Мы отправили электронное письмо на {email} с инструкциями по сбросу пароля. Если вы не получили сообщение о сбросе пароля через 1 минуту, убедитесь, что вы ввели правильный адрес электронной почты, или проверьте папку со спамом. Если вам нужна дополнительная помощь, нажмите кнопку {supportLink} .",
   "forgot.password.page.title": "Забыли пароль | {siteName}",
   "forgot.password.page.heading": "Сброс пароля",
   "forgot.password.page.instructions": "Пожалуйста, введите свой адрес электронной почты ниже, и мы вышлем вам электронное письмо с инструкциями по сбросу пароля.",
@@ -37,9 +37,9 @@
   "forgot.password.empty.email.field.error": "Введите вашу эл. почту",
   "forgot.password.email.help.text": "Адрес электронной почты, который вы использовали при регистрации {platformName} .",
   "confirmation.message.title": "Проверьте свою электронную почту",
-  "confirmation.support.link": "связаться с техподдержкой",
+  "confirmation.support.link": "техподдержка",
   "need.help.sign.in.text": "Нужна помощь со входом?",
-  "additional.help.text": "Для получения дополнительной помощи обратитесь в службу поддержки {platformName} по адресу",
+  "additional.help.text": "Для получения дополнительной помощи обратитесь в службу поддержки {platformName} по адресу ",
   "sign.in.text": "Вход",
   "extend.field.errors": "{emailError} ниже.",
   "invalid.token.heading": "Неверная ссылка для сброса пароля",
