--- a/translations/frontend-app-authn/src/i18n/messages/ru.json
+++ b/translations/frontend-app-authn/src/i18n/messages/ru.json
@@ -97,7 +97,7 @@
   "progressive.profiling.page.heading": "Несколько вопросов к вам помогут нам стать умнее.",
   "optional.fields.information.link": "Узнайте больше о том, как мы используем эту информацию.",
   "optional.fields.submit.button": "Отправить",
-  "optional.fields.skip.button": "Пропустить сейчас",
+  "optional.fields.skip.button": "Пропустить",
   "optional.fields.next.button": "Вперёд",
   "continue.to.platform": "Продолжить до {platformName}",
   "modal.title": "Спасибо за то, что дали нам знать.",
@@ -106,7 +106,7 @@
   "welcome.page.error.message": "Произошла ошибка. Вы можете заполнить свой профиль в настройках в любое время.",
   "recommendation.page.title": "Рекомендации | {siteName}",
   "recommendation.page.heading": "У нас есть несколько рекомендаций, с которых можно начать.",
-  "recommendation.skip.button": "Пропустить сейчас",
+  "recommendation.skip.button": "Пропустить",
   "recommendation.option.trending": "Актуальные",
   "recommendation.option.popular": "Самый популярный",
   "recommendation.option.recommended.for.you": "Рекомендуется для вас",
