--- a/translations/frontend-app-learning/src/i18n/messages/ru.json
+++ b/translations/frontend-app-learning/src/i18n/messages/ru.json
@@ -6,7 +6,7 @@
   "learning.logistration.register": "зарегистрируйтесь",
   "learning.logistration.login": "войдите",
   "general.signIn.sentenceCase": "Вход",
-  "tours.abandonTour.launchTourCheckpoint.body": "Чувствовать себя потерянным? Запустите тур в любое время, чтобы получить несколько простых советов, которые помогут получить максимальную отдачу от впечатлений.",
+  "tours.abandonTour.launchTourCheckpoint.body": "Запутались? Запустите тур в любое время, чтобы получить несколько простых советов, которые помогут получить максимальную отдачу от платформы.",
   "tours.sequenceNavigationCheckpoint.body": "Верхняя панель вашего курса позволяет легко переходить к различным разделам и показывает, что будет дальше.",
   "tours.existingUserTour.launchTourCheckpoint.body": "Недавно мы добавили в курс несколько новых функций. Хотите помочь осмотреться? Совершите экскурсию, чтобы узнать больше.",
   "tours.button.dismiss": "Скрыть",
@@ -16,7 +16,7 @@
   "tours.button.launchTour": "Стартовый тур",
   "tours.newUserModal.body": "Давайте совершим краткий обзор {siteName} , чтобы вы могли получить максимальную отдачу от курса.",
   "tours.newUserModal.title.welcome": "Добро пожаловать в ваш",
-  "tours.button.skipForNow": "Пропустить сейчас",
+  "tours.button.skipForNow": "Пропустить",
   "learning.loading.failure": "Возникла ошибка загрузки курса.",
   "learning.loading": "Загрузка страницы курса...",
   "learning.accessExpiration.deadline": "Обновите {date} , чтобы получить неограниченный доступ к курсу, пока он существует на сайте.",
@@ -204,7 +204,7 @@
   "tours.upgradeCheckpoint.title": "Разблокируйте свой курс",
   "tours.weeklyGoalsCheckpoint.body": "Постановка цели повышает вероятность завершения курса.",
   "tours.weeklyGoalsCheckpoint.title": "Установите цель курса",
-  "tours.newUserModal.title": "{welcome} {siteName} конечно!",
+  "tours.newUserModal.title": "{welcome} {siteName}!",
   "learning.effortEstimation.combinedEstimate": "{minutes} + {activities}",
   "learning.effortEstimation.activities": "{activityCount, plural, one {# активность} few {# деятельность} many {# деятельность} other {# деятельность}}",
   "learning.effortEstimation.minutesAbbreviated": "{minuteCount, plural, one {# мин.} few {# мин.} many {# мин.} other {# мин.}}",
