--- a/translations/frontend-app-authn/src/i18n/messages/ru.json
+++ b/translations/frontend-app-authn/src/i18n/messages/ru.json
@@ -168,8 +168,8 @@
   "reset.password.success.heading": "Сброс пароля завершен.",
   "reset.password.success": "Ваш пароль был сброшен. Войдите в свой аккаунт.",
   "rate.limit.error": "Произошла ошибка из-за слишком большого количества запросов. Пожалуйста, повторите попытку через некоторое время.",
-  "start.learning": "Начать обучение",
-  "with.site.name": "с {siteName}",
+  "start.learning": "Образовательные курсы ФАУ",
+  "with.site.name": "ЕИПП",
   "your.career.turning.point": "Поворотный момент в вашей карьере",
   "is.here": "здесь.",
   "welcome.to.platform": "Добро пожаловать в {siteName} , {fullName} !",
