--- a/translations/frontend-app-account/src/i18n/messages/ru.json
+++ b/translations/frontend-app-account/src/i18n/messages/ru.json
@@ -76,14 +76,14 @@
   "account.settings.field.education": "Образование",
   "account.settings.field.education.empty": "Добавить уровень образования",
   "account.settings.field.education.levels.empty": "Выбрать уровень образования",
-  "account.settings.field.education.levels.p": "Учёная степень",
-  "account.settings.field.education.levels.m": "Магистратура или специалитет",
-  "account.settings.field.education.levels.b": "Степень бакалавра",
-  "account.settings.field.education.levels.a": "Незаконченное высшее образование",
-  "account.settings.field.education.levels.hs": "Среднее",
-  "account.settings.field.education.levels.jhs": "Незаконченное среднее",
-  "account.settings.field.education.levels.el": "Начальное",
-  "account.settings.field.education.levels.none": "Нет формального образования",
+  "account.settings.field.education.levels.p": "Кандидат наук",
+  "account.settings.field.education.levels.m": "Вышсее (специалитет)",
+  "account.settings.field.education.levels.b": "Высшее (бакалавриат)",
+  "account.settings.field.education.levels.a": "Высшее (специалитет)",
+  "account.settings.field.education.levels.hs": "Среднее профессиональное образование ",
+  "account.settings.field.education.levels.jhs": "Получаю высшее образование",
+  "account.settings.field.education.levels.el": "Доктор наук",
+  "account.settings.field.education.levels.none": "Получаю среднее профессиональное образование",
   "account.settings.field.education.levels.other": "Другое образование",
   "account.settings.field.gender": "Пол",
   "account.settings.field.gender.empty": "Добавить пол",
