--- a/translations/frontend-app-learner-dashboard/src/i18n/messages/ru.json
+++ b/translations/frontend-app-learner-dashboard/src/i18n/messages/ru.json
@@ -19,7 +19,7 @@
   "learner-dash.courseListFilters.sortLastEnrolled": "Последняя регистрация",
   "learner-dash.courseListFilters.sortTitle": "Название (Я)",
   "learner-dash.courseListFilters.refine": "Уточнить",
-  "dashboard.mycourses": "Мои курсы",
+  "dashboard.mycourses": "Мои Курсы",
   "learner-dash.emailSettings.header": "Получать электронные письма о курсах?",
   "learner-dash.emailSettings.emailsOff": "Электронная рассылка курсов отключена",
   "learner-dash.emailSettings.emailsOn": "Электронная рассылка курсов включена",
