--- a/translations/frontend-component-footer/src/i18n/messages/ru.json
+++ b/translations/frontend-component-footer/src/i18n/messages/ru.json
@@ -34,7 +34,7 @@
   "authoring.footer.help.edxDocumentation.button.label": "документация edX",
   "authoring.footer.help.openEdxPortal.button.label": "Открыть портал edX",
   "authoring.footer.help.edx101.button.label": "Записаться на курс edX 101",
-  "authoring.footer.help.studioX.button.label": "Пройти курс «Как создать курс в Studio»",
+  "authoring.footer.help.studioX.button.label": "Пройти курс Как создать курс в Studio",
   "authoring.footer.help.contactUs.button.label": "Связаться с нами",
   "authoring.footer.termsOfService.link.label": "Договор публичной оферты",
   "authoring.footer.privacyPolicy.link.label": "Политика конфиденциальности",
