--- a/translations/frontend-app-account/src/i18n/messages/ru.json
+++ b/translations/frontend-app-account/src/i18n/messages/ru.json
@@ -77,7 +77,7 @@
   "account.settings.field.education.empty": "Добавить уровень образования",
   "account.settings.field.education.levels.empty": "Выбрать уровень образования",
   "account.settings.field.education.levels.p": "Кандидат наук",
-  "account.settings.field.education.levels.m": "Вышсее (специалитет)",
+  "account.settings.field.education.levels.m": "Высшее (магистратура)",
   "account.settings.field.education.levels.b": "Высшее (бакалавриат)",
   "account.settings.field.education.levels.a": "Высшее (специалитет)",
   "account.settings.field.education.levels.hs": "Среднее профессиональное образование ",
