--- a/translations/platform-plugin-aspects/platform_plugin_aspects/conf/locale/ru/LC_MESSAGES/django.po
+++ b/translations/platform-plugin-aspects/platform_plugin_aspects/conf/locale/ru/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgstr ""
 "PO-Revision-Date: 2023-06-13 09:00+0000\n"
 "Last-Translator: \n"
 "Language-Team: openedx-translation <openedx-translation@googlegroups.com>\n"
-"Language: en\n"
+"Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
